# F25-CompConst

./: .gitignore  Makefile  README.md  pseudo.txt  syscalls_old
src/: CMakeLists.txt  conanfile.txt  main.cpp  main2.cpp
src/Analyzer/: Analyzer.cpp
src/analyzer/: Analyzer.cpp  Analyzer.h  Optimizer.cpp  Optimizer.h  utils.cpp  utils.h
src/codegen/: Codegen.cpp  Codegen.h  build.cpp  visitor.h
src/include/: FileReader.h
src/include/analyzer/: Analyzer.h  Optimizer.h  utils.h
src/include/ast/: Ast.h  DebugTree.h  Entity.h  Parser.h  Structs.h
src/include/codegen/: Codegen.h  visitor.h
src/include/lexer/: Lexer.h  LexerStatus.h  Token.h  TokenList.h  TokenType.h  Tokens.h
src/include/parser/: Ast.h  DebugTree.h  Entity.h  Parser.h  Printer.h  debug.h  fwd_structs.h  printing.h  srlz.h  structs.h
src/include/report/: CompileMsg.h  Report.h
src/include/utils/: Logger.h  PrintingUtils.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  debug.h
src/parser/: Ast.cpp  Ast.h  DebugTree.cpp  DebugTree.h  Entity.h  Parser.cpp  Parser.h  Printer.cpp  srlz.cpp  srlz.h  structs.h  structs_fwd.h
src/utils/: FileReader.h  PrintingUtils.h
src/utils/report/: CompileMsg.h  Report.h
tests/: README  func.impp  heapObjDecrement  record  tmpObj  tmpObj2  vardec.impp
tests/0_basic/: 0_print  1_basic  2_basic2  3_primary_expr  4_real  5_sum_expr  6_assign  6_factor_expr  7_relation_expr  8_expr  test  trest
tests/1_keywords/: 10_while  11_type  12_array  13_array_record  13_record  14_for  15_ref_count  9_if
tests/2_routine/: 16_routine  17_recursion  17_shadowing  18_shadowing  19_record_ref  20_empty_square_brackets
tests/3_program/: BigFile  Vector  boolean.impp  while.impp
tests/erroneous/: code_outside_of_routine  int_out_range  int_out_range2  invalid_int  lexer_test  print_user_type  real_two_dots  routine_in_routine  start  type_mismatch  unrecognized_symbol  var_declaration
tests/erroneous/array/: array_OOB
tests/erroneous/assign/: bool_int_assignment  bool_real_assignment  user_type_assignment  user_type_diff_nature
tests/erroneous/loops/: for_in_1  for_in_2  for_in_3
tests/erroneous/record/: LinkedList  record_declaration  square_brackets_record
tests/showcase/: arrBndsCk  heapObjDecrement  nestedHeapObjs  nestedHeapObjs2  optimizer  returnDestructor  tmpObj2
tests/showcase/pres/: 19_record_ref  obj_assign
